# DryDocs

./: .env.example  .gitignore  LICENSE  LoadPlanV2  LoadPlanV3  README.md  pyproject.toml
.claude/: settings.json  settings.local.json
docs/: RELATIONSHIP_GUIDE.md
docs/history/: LoadPlanV3.md  M0-README.md  M1-Fix-README.md  README.md
drydocs/: cli.py  config.py  neo4j_client.py
drydocs/adapters/: __init__.py  base.py  csv_adapter.py  oracle_adapter.py
drydocs/controlm/: __init__.py  folder_name.py
drydocs/data/samples/: catalog_lobs__sample.csv  controlm_conditions_in__sample.csv  controlm_conditions_out__sample.csv  controlm_dependencies__sample.csv  controlm_folders__sample.csv  controlm_jobs__sample.csv  dev_teams__sample.csv  product_lines__sample.csv  (+3 more)
drydocs/loaders/: __init__.py  base.py  business_segments.py  catalog.py  controlm.py  controlm_conditions_in.py  controlm_conditions_out.py  controlm_dependencies_derived.py  controlm_folders.py  controlm_jobs.py  seal_applications.py  seal_contacts.py
drydocs/models/: __init__.py  catalog.py  controlm.py  seal.py
drydocs/ontology/: namespaces.py  relationship_vocabulary.yaml
drydocs/schema/: catalog_ontology_supplement.cypher  constraints.cypher  m1_role_vocabulary_update.cypher  m3_constraints_upgrade.cypher  m3_ontology_supplement.cypher  ontology.cypher  seal_ontology_supplement.cypher
drydocs/snapshots/: __init__.py  writer.py
tests/unit/: test_base_loader_smoke.py  test_controlm_cypher.py  test_controlm_models.py  test_folder_name_parser.py  test_namespaces.py  test_schema.py
(+16 files in other folders)
